--- a/index.html
+++ b/index.html
@@ -15,16 +15,33 @@
 
 <div class="row">
 <div class="span8 offset2" style="text-align:center">
+
+<body>
+<br>
 <h3>Alice Fraser: Comedian</h3>
+
+<h5>
+
+<p>
+<a href="bio.html">Bio</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="photos.html">Photos</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="gigs.html">Gigs</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="contact.html">Contact</a>&nbsp;&nbsp;
+</p>
+
+
+
+<a href="http://www.fbiradio.com/program/tracksuits/">Radio</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
+<a href="http://www.facebook.com/AggressivelyHelpful">Aggressively Helpful</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
+<a href="http://lucidandalight.tumblr.com/">Serious Writing</a>
+
+</h5>	
+
 <br>
-
-<img src="img/MyPicture.jpg" alt="some_text"> 
+<img src="img/MyPicture.jpg" width="440" alt="some_text"> 
 
 <br>
 <br>
-
-
-
 <a href="https://twitter.com/aliterative"><img src="img/twitter.png" alt="some_text">&nbsp;</a>
 <a href="http://www.facebook.com/alice.r.fraser"><img src="img/facebook.png" alt="some_text">&nbsp;</a>
 <a href="http://lucidandalight.tumblr.com/"><img src="img/tumblr.png" alt="some_text">&nbsp;</a>
@@ -32,25 +49,17 @@
 <a href="http://www.youtube.com/user/alicerfraser/videos?view=15&flow=grid"><img src="img/you_tube.png" alt="some_text"></a>&nbsp;
 
 
-
-
 <br>
 <br>
 
-
+<small>Copyright Alice Fraser 2013, All rights reserved</small>
+<br>
+<br>
 </div>
 </div>
 </div>
 </div>
-
-
-
 
 </body>
-
-
-
-
-
 
 </html>
