--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <p>
 <a href="bio.html">Bio</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="media.html">Media</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="photos.html">Photos</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="gigs.html">Gigs</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="contact.html">Contact</a>&nbsp;&nbsp;
@@ -38,7 +39,7 @@
 </h5>	
 
 <br>
-<img src="img/MyPicture.jpg" width="440" alt="some_text"> 
+<img src="img/HS_intro_pic.jpg" width="350" alt="some_text"> 
 
 <br>
 <br>
