--- a/photos.html
+++ b/photos.html
@@ -25,8 +25,9 @@
 <img src="img/ali_saucy.jpg" width="440" alt="some_text"> 
 
 <br><br>
-More to come...
 
+
+<a href="index.html">< Back</a>
 
 	</div>
 	</div>
