--- a/photos.html
+++ b/photos.html
@@ -21,13 +21,24 @@
 	</div>
 
 
+<p><img src="img/HS_big_grin.jpg" width="440" alt="some_text"> </p>
+<p><img src="img/HS_demure.jpg" width="440" alt="some_text"> </p>
+<p><img src="img/HS_downcast_eyes.jpg" width="440" alt="some_text"> </p>
+<p><img src="img/HS_glamour.jpg" width="440" alt="some_text"> </p>
+<p><img src="img/HS_skeptical.jpg" width="440" alt="some_text"> </p>
+<p><img src="img/ali_saucy.jpg" width="440" alt="some_text"> </p>
 
-<img src="img/ali_saucy.jpg" width="440" alt="some_text"> 
+
+
+
+<b><a href="http://www.facebook.com/alice.r.fraser/photos">For more photos, check Alice out on Facebook</a></b>
 
 <br><br>
 
 
 <a href="index.html">< Back</a>
+
+<br><br>
 
 	</div>
 	</div>
