--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </h5>	
 
 <br>
-<img src="img/HS_intro_pic.jpg" width="350" alt="some_text"> 
+<img src="img/HS_Crop.png" width="350" alt="some_text"> 
 
 <br>
 <br>
