Corrections to bio.

--- a/gigs.html
+++ b/gigs.html
@@ -33,13 +33,13 @@
 <hr>
 	
 
-	<h4>"Rise and Fall of the Romance Empire"</h4>
+	<h4>"Aggressively Helpful"</h4>
 
 	<p>Sydney Comedy Festival 2013</p>
 
 	<p>April 25 and 27</p>
 
-	<a href="mailto:alicerfraser@gmail.com?subject=Advance%20bookings%20for%20Rise%20and%20Fall%20of%20the%20Romance%20Empire" class="btn btn-info">Buy Tickets!</a>
+	<a href="http://www.seymourcentre.com/events/event/agressively-helpful/" class="btn btn-info">Buy Tickets!</a>
 
 	<br>
 	
@@ -53,7 +53,7 @@
 	
 	<p>30 April, 1 May</p>
 
-	<a href="mailto:alicerfraser@gmail.com?subject=Advance%20Ticket%20for%20Sydney%20Comedy%20Festival%20request%2Finquiry" class="btn btn-info">Buy Tickets!</a>
+	<a href="http://premier.ticketek.com.au/shows/show.aspx?sh=ALICEFRA13#.UUwC6Vsmnzc" class="btn btn-info">Buy Tickets!</a>
 
 
 
