--- a/gigs.html
+++ b/gigs.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
-<body>
+<body style="background-color:#faf0e6;">
 <div class="container">
 
 	<div class="row">
