--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="row">
 <div class="span8 offset2" style="text-align:center">
 
-<body>
+<body style="background-color:#faf0e6;">
 <br>
 <h3>Alice Fraser: Comedian</h3>
 
