--- a/gigs.html
+++ b/gigs.html
@@ -18,48 +18,44 @@
 	</div>
 	</div>
 
-
 <hr>
 
 
-	<h4>"Aggressively Helpful"</h4>
+	<h4>"Aggressively Helpful" EXTRA SHOW </h4>
 
 	<p>Sydney Comedy Festival 2013</p>
 
-	<p>April 25 and 27</p>
+	<p> May 10, 10.15pm, Factory Theatre, Marrickville</p>
 
-	<a href="http://www.seymourcentre.com/events/event/agressively-helpful/" class="btn btn-info">Buy Tickets!</a>
+	<a href=" http://premier.ticketek.com.au/Shows/Show.aspx?sh=AGGRESSI13" class="btn btn-info">Buy Tickets!</a>
 
 	<br>
 
-
-
+<hr>
 <hr>
 
-	<h4>"Word Crime"</h4>
+	<h4>"Nerd Nite All Star Comedy Gala"</h4>
 
 	<p>Sydney Comedy Festival 2013</p>
 
-	<p>30 April, 1 May</p>
+	<p>Tue 07 May , 7:30 PM</p>
 
-	<a href="http://premier.ticketek.com.au/shows/show.aspx?sh=ALICEFRA13#.UUwC6Vsmnzc" class="btn btn-info">Buy Tickets!</a>
-
+	<a href="http://www.sydneycomedyfest.com.au/single-event?show_id=86">Buy Tickets!</a>
 
 
 <hr>
-
+<hr>
 
 	<h4>"Rights! Comedy! Action!" ActionAid Comedy Gala</h4>
 
 	<p>Sydney Comedy Festival 2013</p>
 
-	<p>30 April, 1 May</p>
+	<p>Thu 09 May 2013 9:30PM</p>
 
 	<a href="http://premier.ticketek.com.au/shows/show.aspx?sh=ACTIONAI13#.UXfWKCsmnze" class="btn btn-info">Buy Tickets!</a>
 
 
 <hr>
-
 
 
 <a href="index.html">< Back</a>
