Gig buttons re-aligned

--- a/gigs.html
+++ b/gigs.html
@@ -18,20 +18,7 @@
 	</div>
 	</div>
 
-<hr>
 
-
-	<h4>"Aggressively Helpful" EXTRA SHOW </h4>
-
-	<p>Sydney Comedy Festival 2013</p>
-
-	<p> May 10, 10.15pm, Factory Theatre, Marrickville</p>
-
-	<a href=" http://premier.ticketek.com.au/Shows/Show.aspx?sh=AGGRESSI13" class="btn btn-info">Buy Tickets!</a>
-
-	<br>
-
-<hr>
 <hr>
 
 	<h4>"Nerd Nite All Star Comedy Gala"</h4>
@@ -40,9 +27,7 @@
 
 	<p>Tue 07 May , 7:30 PM</p>
 
-	<a href="http://www.sydneycomedyfest.com.au/single-event?show_id=86">Buy Tickets!</a>
-
-
+	<a href="http://www.sydneycomedyfest.com.au/single-event?show_id=86" class="btn btn-info">Buy Tickets!</a>
 <hr>
 <hr>
 
@@ -53,10 +38,19 @@
 	<p>Thu 09 May 2013 9:30PM</p>
 
 	<a href="http://premier.ticketek.com.au/shows/show.aspx?sh=ACTIONAI13#.UXfWKCsmnze" class="btn btn-info">Buy Tickets!</a>
-
-
+<hr>
 <hr>
 
+	<h4>"Aggressively Helpful" EXTRA SHOW </h4>
+
+	<p>Sydney Comedy Festival 2013</p>
+
+	<p> May 10, 10.15pm, Factory Theatre, Marrickville</p>
+
+	<a href=" http://premier.ticketek.com.au/Shows/Show.aspx?sh=AGGRESSI13" class="btn btn-info">Buy Tickets!</a>
+
+	<br>
+<hr>
 
 <a href="index.html">< Back</a>
 <br>
