Dates made consistent

--- a/gigs.html
+++ b/gigs.html
@@ -25,7 +25,7 @@
 
 	<p>Sydney Comedy Festival 2013</p>
 
-	<p>Tue 07 May , 7:30 PM</p>
+	<p>Tue 07 May, 7:30 PM, Factory Theatre, Marrickville</p>
 
 	<a href="http://www.sydneycomedyfest.com.au/single-event?show_id=86" class="btn btn-info">Buy Tickets!</a>
 <hr>
@@ -35,7 +35,7 @@
 
 	<p>Sydney Comedy Festival 2013</p>
 
-	<p>Thu 09 May 2013 9:30PM</p>
+	<p>Thu 09 May, 9:30PM, Enmore Theatre</p>
 
 	<a href="http://premier.ticketek.com.au/shows/show.aspx?sh=ACTIONAI13#.UXfWKCsmnze" class="btn btn-info">Buy Tickets!</a>
 <hr>
@@ -45,7 +45,7 @@
 
 	<p>Sydney Comedy Festival 2013</p>
 
-	<p> May 10, 10.15pm, Factory Theatre, Marrickville</p>
+	<p> Fri 10 May, 10.15pm, Factory Theatre, Marrickville</p>
 
 	<a href=" http://premier.ticketek.com.au/Shows/Show.aspx?sh=AGGRESSI13" class="btn btn-info">Buy Tickets!</a>
 
