Lines in place on home page

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
 <a href="http://www.fbiradio.com/program/tracksuits/">Radio</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
 <a href="http://www.facebook.com/AggressivelyHelpful">Aggressively Helpful</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
-<a href="http://lucidandalight.tumblr.com/">Poetry</a>
-<a href="http://alicecomedyfraser.tumblr.com/">Comedy Blog</a>
+<a href="http://lucidandalight.tumblr.com/">Poetry</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
+<a href="http://alicecomedyfraser.tumblr.com/">Comedy Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
 
 </h5>	
 
