Completely new revision.

--- a/index.html
+++ b/index.html
@@ -5,63 +5,157 @@
 
   <link rel="stylesheet" href="css/bootstrap.css">
 
+<style>
+
+.tile{
+  width:210px;
+  height:270px;
+  background:white;
+  float:left;
+  margin:7px;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.about_text{
+    color: rgb(102, 102, 101);
+display: block;
+font-family: ff-tisa-web-pro, Georgia, Cambria, 'Times New Roman', Times, serif;
+font-size: 16px;
+font-style: italic;
+font-weight: normal;
+height: 57px;
+line-height: 19px;
+}
+
+.about_heading{
+    color: rgb(51, 51, 50);
+display: block;
+font-family: freight-sans-pro, 'Myriad Pro', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
+font-size: 32px;
+font-weight: bold;
+height: 32px;
+letter-spacing: -1px;
+line-height: 32px;
+}
+
+.title{
+
+color: rgb(179, 179, 177);
+display: block;
+font-family: freight-sans-pro, 'Myriad Pro', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
+font-size: 14px;
+font-weight: bold;
+height: 16px;
+letter-spacing: 2px;
+}
+
+.band{
+    width:100%;
+    padding-top: 12px;
+  height:13%;
+position: absolute;
+bottom: 0;
+  background:black;
+  text-align: center;
+
+
+}
+
+.band_text{
+    color:white;
+    font-size: 16px;
+    font-family: freight-sans-pro, 'Myriad Pro', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
+font-size: 21px;
+
+}
+
+a.special {color:white;}
+
+img.center { display: block; margin-left: auto; margin-right: auto; }
+
+td {font-size:16px;text-align: center; background-color: black;padding: 10px; width:20%;}
+
+.textblock { display: block; margin-left: auto; margin-right: auto; width:300px; }
+
+</style>
+
 </head>
 
 
 
 
 
-<div class="container">
-
-<div class="row">
-<div class="span8 offset2" style="text-align:center">
-
-<body style="background-color:#faf0e6;">
-<br>
-<h3>Alice Fraser: Comedian</h3>
-
-<h5>
-
-<p>
-<a href="bio.html">Bio</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="media.html">Media</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="photos.html">Photos</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="gigs.html">Gigs</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="contact.html">Contact</a>&nbsp;&nbsp;
-</p>
 
 
 
-<a href="http://www.fbiradio.com/program/tracksuits/">Radio</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
-<a href="http://www.facebook.com/AggressivelyHelpful">Aggressively Helpful</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
-<a href="http://lucidandalight.tumblr.com/">Poetry</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
-<a href="http://alicecomedyfraser.tumblr.com/">Comedy Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp; 
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span4" style="background-color:rgb(255, 255, 255);width:380px;">
+        <img class="center" src="img/headshot.jpg" width="350px" alt="some_text">
 
-</h5>	
+         <table style="width:350px" align=center>
+            <tr>
+        <td >  <a href="bio.html" class="special">Bio</a> </td>
+        <td >  <a href="http://alicecomedyfraser.tumblr.com/" class="special">Blog</a> </td>
+        <td ><a href="media.html" class="special">Media</a></td>
+        <td ><a href="photos.html" class="special">Photos</a></td>
+        <td ><a href="http://www.youtube.com/user/alicerfraser/videos?view=15&flow=grid" class="special">Videos</a></td>
 
-<br>
-<img src="img/HS_Crop.png" width="350" alt="some_text"> 
+    </tr>
 
-<br>
-<br>
-<a href="https://twitter.com/aliterative"><img src="img/twitter.png" alt="some_text">&nbsp;</a>
-<a href="http://www.facebook.com/alice.r.fraser"><img src="img/facebook.png" alt="some_text">&nbsp;</a>
-<a href="http://lucidandalight.tumblr.com/"><img src="img/tumblr.png" alt="some_text">&nbsp;</a>
-<a href="http://www.linkedin.com/profile/view?id=73512808&locale=en_US&trk=tyah"><img src="img/linkedin.png" alt="some_text">&nbsp;</a>
-<a href="http://www.youtube.com/user/alicerfraser/videos?view=15&flow=grid"><img src="img/you_tube.png" alt="some_text"></a>&nbsp;
+        </table>
+        <br>
+        <p class="about_heading" style= "text-align:center;">Alice Fraser</h3></p>
+
+      <div class="textblock"><p class="about_text"> Alice is a writer and stand-up comedian.  A Cambridge graduate, she writes for both high and low culture publications.</p>  <p class="about_text">You can follow Alice  <a href="https://twitter.com/aliterative" style="font-color:blue;">@aliterative</a>  or email her on <a href="mailto:alicerfraser@me.com">alicerfraser@me.com</a>.</p> </div>
 
 
-<br>
-<br>
 
-<small>Copyright Alice Fraser 2013, All rights reserved</small>
-<br>
-<br>
+
+    </div>
+
+    <div class="span7" style="background-color:rgb(255, 255, 255);">
+
+
+
+
+
+
+
+
+        <hr>
+
+        <span class="title">PROJECTS</span>
+
+        <hr>
+
+
+            <a href="http://newslabarticles.tumblr.com/"> <div class="tile" style="background-image:url('img/newslab.png');background-size: 165px;background-repeat:repeat;background-position:top;"> <div class="band"><text class="band_text">News Lab</div></div> </a>
+
+            <a href="http://www.fbiradio.com/program/tracksuits/"><div class="tile" style="background-image:url('img/fbi.jpg');background-size: 610px;"><div class="band"><text class="band_text">FBi Radio</div></div> </a>
+
+            <a href="gigs.html"><div class="tile" style="background-image:url('img/standup.png');background-size: 220px;background-position:top;"><div class="band"><text class="band_text">Standup Comedy</div></div> </a>
+
+
+
+
+            <a href="http://alicecomedyfraser.tumblr.com/"><div class="tile" style="background-image:url('img/podcast.jpg');background-size: 315px;background-position:center;background-position:top;">
+                <div class="band"><text class="band_text">Blog</div>
+            </div> </a>
+
+            <a href="http://www.facebook.com/AggressivelyHelpful"> <div class="tile" style="background-image:url('img/aggressive.png');background-size: 320px;background-position:center;background-position:top;"><div class="band"><text class="band_text">Aggressively Helpful</div></div> </a>
+
+            <a href="http://lucidandalight.tumblr.com/"><div class="tile" style="background-image:url('img/poetry.jpg');background-size: 315px;background-position:center;background-position:top;">
+                <div class="band"><text class="band_text">Poetry</div>
+            </div> </a>
+    </div>
+
+
+    </div>
+  </div>
 </div>
-</div>
-</div>
-</div>
 
-</body>
+
 
 </html>
