Made the changes.

--- a/index.html
+++ b/index.html
@@ -131,22 +131,22 @@ td {font-size:16px;text-align: center; background-color: black;padding: 10px; wi
         <hr>
 
 
-            <a href="http://newslabarticles.tumblr.com/"> <div class="tile" style="background-image:url('img/newslab.png');background-size: 165px;background-repeat:repeat;background-position:top;"> <div class="band"><text class="band_text">News Lab</div></div> </a>
+            <a href="http://newslabarticles.tumblr.com/" target="_blank"> <div class="tile" style="background-image:url('img/newslab.png');background-size: 165px;background-repeat:repeat;background-position:top;"> <div class="band"><text class="band_text">News Lab</div></div> </a>
 
-            <a href="http://www.fbiradio.com/program/tracksuits/"><div class="tile" style="background-image:url('img/fbi.jpg');background-size: 610px;"><div class="band"><text class="band_text">FBi Radio</div></div> </a>
+            <a href="http://www.fbiradio.com/program/tracksuits/" target="_blank"><div class="tile" style="background-image:url('img/fbi.jpg');background-size: 610px;"><div class="band"><text class="band_text">FBi Radio</div></div> </a>
 
-            <a href="gigs.html"><div class="tile" style="background-image:url('img/standup.png');background-size: 220px;background-position:top;"><div class="band"><text class="band_text">Standup Comedy</div></div> </a>
-
-
+            <a href="gigs.html" target="_blank"><div class="tile" style="background-image:url('img/standup.png');background-size: 220px;background-position:top;"><div class="band"><text class="band_text">Standup Comedy</div></div> </a>
 
 
-            <a href="http://alicecomedyfraser.tumblr.com/"><div class="tile" style="background-image:url('img/podcast.jpg');background-size: 315px;background-position:center;background-position:top;">
+
+
+            <a href="http://alicecomedyfraser.tumblr.com/" target="_blank"><div class="tile" style="background-image:url('img/podcast.jpg');background-size: 315px;background-position:center;background-position:top;">
                 <div class="band"><text class="band_text">Blog</div>
             </div> </a>
 
-            <a href="http://www.facebook.com/AggressivelyHelpful"> <div class="tile" style="background-image:url('img/aggressive.png');background-size: 320px;background-position:center;background-position:top;"><div class="band"><text class="band_text">Aggressively Helpful</div></div> </a>
+            <a href="http://www.facebook.com/AggressivelyHelpful" target="_blank"> <div class="tile" style="background-image:url('img/aggressive.png');background-size: 320px;background-position:center;background-position:top;"><div class="band"><text class="band_text">Aggressively Helpful</div></div> </a>
 
-            <a href="http://lucidandalight.tumblr.com/"><div class="tile" style="background-image:url('img/poetry.jpg');background-size: 315px;background-position:center;background-position:top;">
+            <a href="http://lucidandalight.tumblr.com/" target="_blank"><div class="tile" style="background-image:url('img/poetry.jpg');background-size: 315px;background-position:center;background-position:top;">
                 <div class="band"><text class="band_text">Poetry</div>
             </div> </a>
     </div>
