--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ td {font-size:16px;text-align: center; background-color: black;padding: 10px; wi
                 <div class="band"><text class="band_text">Blog</div>
             </div> </a>
 
-            <a href="http://www.facebook.com/AggressivelyHelpful" target="_blank"> <div class="tile" style="background-image:url('img/aggressive.png');background-size: 320px;background-position:center;background-position:top;"><div class="band"><text class="band_text">Aggressively Helpful</div></div> </a>
+            <a href="http://www.aggressivelyhelpful.com" target="_blank"> <div class="tile" style="background-image:url('img/aggressive.png');background-size: 320px;background-position:center;background-position:top;"><div class="band"><text class="band_text">Aggressively Helpful</div></div> </a>
 
             <a href="http://lucidandalight.tumblr.com/" target="_blank"><div class="tile" style="background-image:url('img/poetry.jpg');background-size: 315px;background-position:center;background-position:top;">
                 <div class="band"><text class="band_text">Poetry</div>
