--- a/index.html
+++ b/index.html
@@ -78,6 +78,22 @@ td {font-size:16px;text-align: center; background-color: black;padding: 10px; wi
 
 .textblock { display: block; margin-left: auto; margin-right: auto; width:300px; }
 
+
+/* iPad */
+@media (min-width: 768px) and (max-width: 960px) {
+}
+
+/* Smart Phone Sideways */
+@media (min-width: 639px) and (max-width: 767px) {
+}
+
+/* Smart Phone */
+@media (min-width: 1px) and (max-width: 638px) {
+
+}
+
+
+
 </style>
 
 </head>
@@ -115,7 +131,7 @@ td {font-size:16px;text-align: center; background-color: black;padding: 10px; wi
 
     </div>
 
-    <div class="span7" style="background-color:rgb(255, 255, 255);">
+    <div class="span7 container-fluid" style="background-color:rgb(255, 255, 255);" id="break">
 
 
 
