--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ td {font-size:16px;text-align: center; background-color: black;padding: 10px; wi
 
     </div>
 
-    <div class="span7 container-fluid" style="background-color:rgb(255, 255, 255);" id="break">
+    <div class="span7" style="background-color:rgb(255, 255, 255);" id="break">
 
 
 
