--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ td {font-size:16px;text-align: center; background-color: black;padding: 10px; wi
         <br>
         <p class="about_heading" style= "text-align:center;">Alice Fraser</h3></p>
 
-      <div class="textblock"><p class="about_text"> Alice is a writer and stand-up comedian.  A Cambridge graduate, she writes for both high and low culture publications.</p>  <p class="about_text">You can follow Alice  <a href="https://twitter.com/aliterative" style="font-color:blue;">@aliterative</a>  or email her on <a href="mailto:alicerfraser@me.com">alicerfraser@me.com</a>.</p> </div>
+      <div class="textblock"><p class="about_text"> I'm a writer and comedian based in Sydney.  I love hearing about interesting projects - feel free to contact me.</p>  <p class="about_text">You can follow me  <a href="https://twitter.com/aliterative" style="font-color:blue;">@aliterative</a>  or email me on <a href="mailto:alicerfraser@me.com">alicerfraser@me.com</a>.</p> </div>
 
 
 
