--- a/gigs.html
+++ b/gigs.html
@@ -18,6 +18,33 @@
 	</div>
 	</div>
 
+<hr>
+
+	<h4>"Just For Kicks Comedy Gala"</h4>
+
+	<p>Sat 1 June from 7pm</p>
+
+	<p>Emanuel School Hall, 20 Stanley Street (corner Avoca St) Randwick</p>
+
+	<a href=" www.trybooking.com/CSGV" class="btn btn-info">Book Here!</a>
+<hr>
+
+<hr>
+
+	<h4>Melbourne: 25 - 31 May</h4>
+
+	<p></p>
+
+	<a href="http://www.twitter.com/aliterative" class="btn btn-info">Follow Alice on Twitter for details of Melbourne Gigs</a>
+<hr>
+
+<hr>
+	<h4>MC at the Oriental Hotel in Newcastle</h4>
+
+	<p></p>
+
+	<p>25 May, 7:30 PM Oriental Hotel, Newcastle.</p>
+<hr>
 
 <hr>
 
@@ -27,7 +54,7 @@
 
 	<p>Tue 07 May, 7:30 PM, Factory Theatre, Marrickville</p>
 
-	<a href="http://www.sydneycomedyfest.com.au/single-event?show_id=86" class="btn btn-info">Buy Tickets!</a>
+	<a href="http://www.sydneycomedyfest.com.au/single-event?show_id=86" class="btn btn-info">SOLD OUT!</a>
 <hr>
 <hr>
 
@@ -37,7 +64,7 @@
 
 	<p>Thu 09 May, 9:30PM, Enmore Theatre</p>
 
-	<a href="http://premier.ticketek.com.au/shows/show.aspx?sh=ACTIONAI13#.UXfWKCsmnze" class="btn btn-info">Buy Tickets!</a>
+	<a href="http://premier.ticketek.com.au/shows/show.aspx?sh=ACTIONAI13#.UXfWKCsmnze" class="btn btn-info">SOLD OUT!</a>
 <hr>
 <hr>
 
@@ -47,7 +74,7 @@
 
 	<p> Fri 10 May, 10.15pm, Factory Theatre, Marrickville</p>
 
-	<a href=" http://premier.ticketek.com.au/Shows/Show.aspx?sh=AGGRESSI13" class="btn btn-info">Buy Tickets!</a>
+	<a href=" http://premier.ticketek.com.au/Shows/Show.aspx?sh=AGGRESSI13" class="btn btn-info"></a>
 
 	<br>
 <hr>
