More Gig Details, Neater Buttons

--- a/gigs.html
+++ b/gigs.html
@@ -22,7 +22,7 @@
 
 	<h4>"Just For Kicks Comedy Gala"</h4>
 
-	<p>Sat 1 June from 7pm</p>
+	<p>Sat 1 June, 7pm</p>
 
 	<p>Emanuel School Hall, 20 Stanley Street (corner Avoca St) Randwick</p>
 
@@ -33,9 +33,11 @@
 
 	<h4>Melbourne: 25 - 31 May</h4>
 
-	<p></p>
+	<p>Spleen Comedy Club, 27 May</p>
+	<p>Shisha Comedy, 28 May</p>
+	<p>More details TBC</p>
 
-	<a href="http://www.twitter.com/aliterative" class="btn btn-info">Follow Alice on Twitter for details of Melbourne Gigs</a>
+	<a href="http://www.twitter.com/aliterative" class="btn btn-info">Watch Twitter for details</a>
 <hr>
 
 <hr>
@@ -43,7 +45,9 @@
 
 	<p></p>
 
-	<p>25 May, 7:30 PM Oriental Hotel, Newcastle.</p>
+	<p>25 May, 7:30 PM Oriental Hotel, 53 Bull St, Cooks Hill, Newcastle.</p>
+
+	<a href="http://www.newcastlecomedy.com/tag/the-oriental-hotel/" class="btn btn-info">Details Here</a>
 <hr>
 
 <hr>
