--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <html lang="en">
 <head>
 
-  <link rel="stylesheet" href="css/bootstrap.css">
-
 <style>
+
+/*Divs*/
+
+.container {
+width: 100%;
+margin: 0 auto;
+border:0px;
+}
+
+.stream {
+  min-width: 605px;
+  margin-left: 37%;
+  margin-right: 10%;
+  background-color: white;
+  backface-visibility: visible;
+  -webkit-backface-visibility: visible;
+  -moz-backface-visibility: visible;
+}
+
+.sidebar{
+  width: 30%;
+  margin-right: 15%;
+  position: fixed;
+  border-right: 1px solid rgb(102, 102, 101);
+  height: 100%;
+  min-width: 350px;
+  min-height:647px;
+}
+
+.tiles_div{
+position: relative;
+display: block;
+max-width: 800px;
+}
 
 .tile{
   width:210px;
@@ -24,7 +56,7 @@ font-family: ff-tisa-web-pro, Georgia, Cambria, 'Times New Roman', Times, serif;
 font-size: 16px;
 font-style: italic;
 font-weight: normal;
-height: 57px;
+height: 40px;
 line-height: 19px;
 }
 
@@ -34,13 +66,23 @@ display: block;
 font-family: freight-sans-pro, 'Myriad Pro', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
 font-size: 32px;
 font-weight: bold;
-height: 32px;
+height: 20px;
 letter-spacing: -1px;
-line-height: 32px;
+line-height: 25px;
 }
 
-.title{
+.band{
+    width:100%;
+    padding-top: 12px;
+    height:13%;
+    position: absolute;
+  bottom: 0;
+  background:black;
+  text-align: center;
+}
 
+
+.title{
 color: rgb(179, 179, 177);
 display: block;
 font-family: freight-sans-pro, 'Myriad Pro', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
@@ -48,18 +90,6 @@ font-size: 14px;
 font-weight: bold;
 height: 16px;
 letter-spacing: 2px;
-}
-
-.band{
-    width:100%;
-    padding-top: 12px;
-  height:13%;
-position: absolute;
-bottom: 0;
-  background:black;
-  text-align: center;
-
-
 }
 
 .band_text{
@@ -70,27 +100,134 @@ font-size: 21px;
 
 }
 
-a.special {color:white;}
+img.center { vertical-align:top; margin:0px; padding: 0px; border:0px; }
 
-img.center { display: block; margin-left: auto; margin-right: auto; }
-
-td {font-size:16px;text-align: center; background-color: black;padding: 10px; width:20%;}
-
-.textblock { display: block; margin-left: auto; margin-right: auto; width:300px; }
-
-
-/* iPad */
-@media (min-width: 768px) and (max-width: 960px) {
+.textblock {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:300px;
 }
 
-/* Smart Phone Sideways */
-@media (min-width: 639px) and (max-width: 767px) {
+
+
+/*TABLE*/
+
+table {
+  width: 100%;
+  background-color: transparent;
+  border-collapse: collapse;
+  border-spacing: 0;
+  border:black;
 }
 
-/* Smart Phone */
-@media (min-width: 1px) and (max-width: 638px) {
 
+td, tr, tbody, table {
+  font-size:16px;
+  text-align: center;
+  background-color: black;
+  padding:10px;
+  padding:black;
+  width:20%;
+  border:black;
+  border:0px;}
+
+.table th,
+.table td {
+  padding: 8px;
+  line-height: 20px;
+  text-align: left;
+  vertical-align: top;
+  border-top: 1px solid #dddddd;
 }
+
+
+/*Elements*/
+
+body { margin:0; padding:0px;}
+
+hr {
+  margin: 15px 0;
+  border: 0;
+  border-top: 1px solid #eeeeee;
+  border-bottom: 1px solid #ffffff;
+}
+
+a:link{
+  text-decoration: none;
+}
+
+a.special {
+  color:white;
+}
+
+
+/*RESPONSIVE*/
+
+@media (max-width: 630px){
+  html{
+    min-height: 0px;
+  }
+
+  body {
+    min-height: 0px;
+  }
+
+  img {
+
+  }
+
+  .sidebar {
+    display: block;
+    position: relative !important;
+    width: auto;
+    height: auto;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    padding-top:10px;
+    min-height: 0px;
+  }
+
+  .title{
+    text-align: center;
+  }
+
+  .container{
+    margin:0px auto;
+  }
+
+  .stream {
+    left:0px;
+    margin:0px auto;
+    padding: 0;
+    border: none;
+    display: block;
+    width: 100%;
+    min-width: 0;
+    margin-top: 15px;
+    clear: both;
+    background-color: white;
+    position: relative;
+    min-height: 0px;
+    display: block;
+  }
+
+
+  .tiles_div{
+      /*margin:0px auto;*/
+      /*clear:both;*/
+      display: block;
+  }
+
+  .tile{
+      margin:8px auto;
+      clear:both;
+      float:none;
+      display: block;
+  }
+}
+
 
 
 
@@ -101,45 +238,49 @@ td {font-size:16px;text-align: center; background-color: black;padding: 10px; wi
 
 
 
+<body>
+
+<div class="container">
+
+
+<div class="sidebar">
 
 
 
 
-<div class="container-fluid">
-  <div class="row-fluid">
-    <div class="span4" style="background-color:rgb(255, 255, 255);width:380px;">
-        <img class="center" src="img/headshot.jpg" width="350px" alt="some_text">
+                                      <img class="center" src="img/headshot.jpg" width="100%" alt="some_text">
 
-         <table style="width:350px" align=center>
-            <tr>
-        <td >  <a href="bio.html" class="special">Bio</a> </td>
-        <td >  <a href="http://alicecomedyfraser.tumblr.com/" class="special">Blog</a> </td>
-        <td ><a href="media.html" class="special">Media</a></td>
-        <td ><a href="photos.html" class="special">Photos</a></td>
-        <td ><a href="http://www.youtube.com/user/alicerfraser/videos?view=15&flow=grid" class="special">Videos</a></td>
+                                       <table style="width:100%" align=center>
+                                          <tr>
+                                      <td >  <a href="bio.html" class="special">Bio</a> </td>
+                                      <td >  <a href="http://alicecomedyfraser.tumblr.com/" class="special">Blog</a> </td>
+                                      <td ><a href="media.html" class="special">Media</a></td>
+                                      <td ><a href="photos.html" class="special">Photos</a></td>
+                                      <td ><a href="http://www.youtube.com/user/alicerfraser/videos?view=15&flow=grid" class="special">Videos</a></td>
 
-    </tr>
+                                  </tr>
 
-        </table>
-        <br>
-        <p class="about_heading" style= "text-align:center;">Alice Fraser</h3></p>
+                                      </table>
 
-      <div class="textblock"><p class="about_text"> I'm a writer and comedian based in Sydney.  I love hearing about interesting projects - feel free to contact me.</p>  <p class="about_text">You can follow me  <a href="https://twitter.com/aliterative" style="font-color:blue;">@aliterative</a>  or email me on <a href="mailto:alicerfraser@me.com">alicerfraser@me.com</a>.</p> </div>
+                                      <p class="about_heading" style= "text-align:center;">Alice Fraser</h3></p>
+
+                                    <div class="textblock"><p class="about_text"> I'm a writer and comedian based in Sydney.  You can follow me  <a href="https://twitter.com/aliterative" style="font-color:blue;">@aliterative</a>  or email me on <a href="mailto:alicerfraser@me.com">alicerfraser@me.com</a>.</p> </div>
 
 
 
 
-    </div>
+</div>
 
-    <div class="span7" style="background-color:rgb(255, 255, 255);" id="break">
+<div class="stream">
 
 
 
 
 
+<br>
 
 
-
+        <div class="tiles_div">
         <hr>
 
         <span class="title">PROJECTS</span>
@@ -165,13 +306,14 @@ td {font-size:16px;text-align: center; background-color: black;padding: 10px; wi
             <a href="http://lucidandalight.tumblr.com/" target="_blank"><div class="tile" style="background-image:url('img/poetry.jpg');background-size: 315px;background-position:center;background-position:top;">
                 <div class="band"><text class="band_text">Poetry</div>
             </div> </a>
-    </div>
+          </div>
 
-
-    </div>
-  </div>
 </div>
 
 
+
+</div>
+
+</body>
 
 </html>
