--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@ a.special {
     position: relative !important;
     width: auto;
     height: auto;
+    border-right: none;
     text-align: center;
     margin: 0;
     padding: 0;
