--- a/index.html
+++ b/index.html
@@ -176,7 +176,11 @@ a.special {
   }
 
   img {
+    width:70%;
+  }
 
+  table{
+    width:70%;
   }
 
   .sidebar {
@@ -188,7 +192,6 @@ a.special {
     text-align: center;
     margin: 0;
     padding: 0;
-    padding-top:10px;
     min-height: 0px;
   }
 
