--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ border:0px;
   border-right: 1px solid rgb(102, 102, 101);
   height: 100%;
   min-width: 350px;
+  max-width: 450px;
   min-height:647px;
 }
 
@@ -111,6 +112,11 @@ img.center { vertical-align:top; margin:0px; padding: 0px; border:0px; }
   width:300px;
 }
 
+
+.div_image{
+  width:100%;
+  height:550px;
+}
 
 
 /*TABLE*/
@@ -254,7 +260,7 @@ a.special {
 
 
 
-                                      <img class="center" src="img/headshot.jpg" width="100%" alt="some_text">
+                                      <div class="div_image" style="background-image:url('img/headshot.jpg');background-size: 460px;background-position:center;"></div>
 
                                        <table style="width:100%" align=center>
                                           <tr>
