See new image setting.

--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@ a.special {
     width:70%;
   }
 
+.div_image{
+  width:100%;
+  max-height:400px;
+}
+
   .sidebar {
     display: block;
     position: relative !important;
