--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@ img.center { vertical-align:top; margin:0px; padding: 0px; border:0px; }
 .div_image{
   width:100%;
   height:550px;
+  background-size: 460px;
+  background-position:center;
 }
 
 
@@ -192,6 +194,10 @@ a.special {
 .div_image{
   width:100%;
   max-height:400px;
+  height:260px;
+  background-size: 330px;
+  background-position:top,center;
+  background-repeat: no-repeat;
 }
 
   .sidebar {
@@ -265,7 +271,7 @@ a.special {
 
 
 
-                                      <div class="div_image" style="background-image:url('img/headshot.jpg');background-size: 460px;background-position:center;"></div>
+                                      <div class="div_image" style="background-image:url('img/headshot.jpg');"></div>
 
                                        <table style="width:100%" align=center>
                                           <tr>
