--- a/index.html
+++ b/index.html
@@ -183,9 +183,6 @@ a.special {
     min-height: 0px;
   }
 
-  img {
-    width:70%;
-  }
 
   table{
     width:70%;
@@ -194,9 +191,9 @@ a.special {
 .div_image{
   width:100%;
   max-height:400px;
-  height:260px;
+  height:200px;
   background-size: 330px;
-  background-position:top,center;
+  background-position:center, center;
   background-repeat: no-repeat;
 }
 
