--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@ a.special {
 .div_image{
   width:100%;
   max-height:400px;
-  height:200px;
+  height:220px;
   background-size: 330px;
-  background-position:center, center;
+  background-position:top, center;
   background-repeat: no-repeat;
 }
 
