--- a/index.html
+++ b/index.html
@@ -188,6 +188,21 @@ a.special {
     width:70%;
   }
 
+.about_heading{
+  font-size: 20px;
+}
+
+.about_text{
+    color: rgb(102, 102, 101);
+display: block;
+font-family: ff-tisa-web-pro, Georgia, Cambria, 'Times New Roman', Times, serif;
+font-size: 12px;
+font-style: italic;
+font-weight: normal;
+height: 40px;
+line-height: 19px;
+}
+
 .div_image{
   width:100%;
   max-height:400px;
