--- a/index.html
+++ b/index.html
@@ -192,6 +192,13 @@ a.special {
   font-size: 20px;
 }
 
+.textblock {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:350px;
+}
+
 .about_text{
     color: rgb(102, 102, 101);
 display: block;
