--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ border:0px;
   min-width: 605px;
   margin-left: 37%;
   margin-right: 10%;
+  padding-top: 25px;
   background-color: white;
   backface-visibility: visible;
   -webkit-backface-visibility: visible;
@@ -196,7 +197,7 @@ a.special {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width:350px;
+  width:340px;
 }
 
 .about_text{
@@ -242,7 +243,7 @@ line-height: 19px;
   .stream {
     left:0px;
     margin:0px auto;
-    padding: 0;
+    padding: 0px;
     border: none;
     display: block;
     width: 100%;
@@ -319,7 +320,7 @@ line-height: 19px;
 
 
 
-<br>
+
 
 
         <div class="tiles_div">
