--- a/index.html
+++ b/index.html
@@ -265,7 +265,8 @@ line-height: 19px;
   }
 
   .tile{
-      margin:8px auto;
+      margin: auto;
+      margin-top: 7px;
       clear:both;
       float:none;
       display: block;
