--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ line-height: 19px;
 
 
 
-        <div class="tiles_div">
+
         <hr>
 
         <span class="title">PROJECTS</span>
@@ -351,10 +351,9 @@ line-height: 19px;
 
             <a href="http://lucidandalight.tumblr.com/" target="_blank"><div class="tile" style="background-image:url('img/poetry.jpg');background-size: 315px;background-position:center;background-position:top;">
                 <div class="band"><text class="band_text">Poetry</div>
-            </div> </a>
-          </div>
+            </div> </a></div>
 
-</div>
+
 
 
 
