--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@ line-height: 19px;
   .stream {
     left:0px;
     margin:0px auto;
-    padding: 0px;
+    padding-top: 0px;
     border: none;
     display: block;
     width: 100%;
-    min-width: 0;
+    min-width: 0px;
     margin-top: 15px;
     clear: both;
     background-color: white;
@@ -255,7 +255,12 @@ line-height: 19px;
     min-height: 0px;
     display: block;
     margin-right: 0px;
+    margin-left: 0px;
   }
+
+
+
+
 
 
   .tiles_div{
