--- a/index.html
+++ b/index.html
@@ -236,9 +236,11 @@ line-height: 19px;
     text-align: center;
   }
 
-  .container{
-    margin:0px auto;
-  }
+  .container {
+width: 100%;
+margin: 0 auto;
+border:0px;
+}
 
   .stream {
     left:0px;
