--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ border:0px;
     margin-top: 15px;
     clear: both;
     background-color: white;
-    position: relative;
+    position: absolute;
     min-height: 0px;
     display: block;
     margin-right: 0px;
