--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ border:0px;
     border: none;
     display: block;
     width: 100%;
-    min-width: 0px;
+    min-width: 100%;
     margin-top: 15px;
     clear: both;
     background-color: white;
