--- a/index.html
+++ b/index.html
@@ -296,72 +296,80 @@ border:0px;
 <div class="container">
 
 
-<div class="sidebar">
+  <div class="sidebar">
 
+      <div class="div_image" style="background-image:url('img/headshot.jpg');"></div>
+        <table style="width:100%" align=center>
+          <tr>
+            <td >  <a href="bio.html" class="special">Bio</a> </td>
+            <td >  <a href="http://alicecomedyfraser.tumblr.com/" class="special">Blog</a> </td>
+            <td ><a href="media.html" class="special">Media</a></td>
+            <td ><a href="photos.html" class="special">Photos</a></td>
+            <td ><a href="http://www.youtube.com/user/alicerfraser/videos?view=15&flow=grid" class="special">Videos</a></td>
+          </tr>
+        </table>
 
+      <p class="about_heading" style= "text-align:center;">Alice Fraser</h3></p>
 
+      <div class="textblock">
+        <p class="about_text"> I'm a writer and comedian based in Sydney.  You can follow me  <a href="https://twitter.com/aliterative" style="font-color:blue;">@aliterative</a>  or email me on <a href="mailto:alicerfraser@me.com">alicerfraser@me.com</a>.</p>
+      </div>
+  </div>
 
-                                      <div class="div_image" style="background-image:url('img/headshot.jpg');"></div>
-
-                                       <table style="width:100%" align=center>
-                                          <tr>
-                                      <td >  <a href="bio.html" class="special">Bio</a> </td>
-                                      <td >  <a href="http://alicecomedyfraser.tumblr.com/" class="special">Blog</a> </td>
-                                      <td ><a href="media.html" class="special">Media</a></td>
-                                      <td ><a href="photos.html" class="special">Photos</a></td>
-                                      <td ><a href="http://www.youtube.com/user/alicerfraser/videos?view=15&flow=grid" class="special">Videos</a></td>
-
-                                  </tr>
-
-                                      </table>
-
-                                      <p class="about_heading" style= "text-align:center;">Alice Fraser</h3></p>
-
-                                    <div class="textblock"><p class="about_text"> I'm a writer and comedian based in Sydney.  You can follow me  <a href="https://twitter.com/aliterative" style="font-color:blue;">@aliterative</a>  or email me on <a href="mailto:alicerfraser@me.com">alicerfraser@me.com</a>.</p> </div>
-
-
-
-
-</div>
 
 <div class="stream">
+    <hr>
 
+    <span class="title">PROJECTS</span>
 
+    <hr>
+        <a href="http://newslabarticles.tumblr.com/" target="_blank">
+          <div class="tile" style="background-image:url('img/newslab.png');background-size: 165px;background-repeat:repeat;background-position:top;">
+            <div class="band">
+              <text class="band_text">News Lab</text>
+            </div>
+          </div>
+        </a>
 
+        <a href="http://www.fbiradio.com/program/tracksuits/" target="_blank">
+          <div class="tile" style="background-image:url('img/fbi.jpg');background-size: 610px;">
+            <div class="band">
+              <text class="band_text">FBi Radio</text>
+            </div>
+          </div>
+        </a>
 
+        <a href="gigs.html" target="_blank">
+          <div class="tile" style="background-image:url('img/standup.png');background-size: 220px;background-position:top;">
+            <div class="band">
+              <text class="band_text">Standup Comedy</text>
+            </div>
+          </div>
+        </a>
 
+        <a href="http://alicecomedyfraser.tumblr.com/" target="_blank">
+          <div class="tile" style="background-image:url('img/podcast.jpg');background-size: 315px;background-position:center;background-position:top;">
+            <div class="band">
+              <text class="band_text">Blog</text>
+            </div>
+          </div>
+        </a>
 
+        <a href="http://www.aggressivelyhelpful.com" target="_blank">
+          <div class="tile" style="background-image:url('img/aggressive.png');background-size: 320px;background-position:center;background-position:top;">
+            <div class="band">
+              <text class="band_text">Aggressively Helpful</text>
+            </div>
+          </div>
+        </a>
 
-
-
-        <hr>
-
-        <span class="title">PROJECTS</span>
-
-        <hr>
-
-
-            <a href="http://newslabarticles.tumblr.com/" target="_blank"> <div class="tile" style="background-image:url('img/newslab.png');background-size: 165px;background-repeat:repeat;background-position:top;"> <div class="band"><text class="band_text">News Lab</div></div> </a>
-
-            <a href="http://www.fbiradio.com/program/tracksuits/" target="_blank"><div class="tile" style="background-image:url('img/fbi.jpg');background-size: 610px;"><div class="band"><text class="band_text">FBi Radio</div></div> </a>
-
-            <a href="gigs.html" target="_blank"><div class="tile" style="background-image:url('img/standup.png');background-size: 220px;background-position:top;"><div class="band"><text class="band_text">Standup Comedy</div></div> </a>
-
-
-
-
-            <a href="http://alicecomedyfraser.tumblr.com/" target="_blank"><div class="tile" style="background-image:url('img/podcast.jpg');background-size: 315px;background-position:center;background-position:top;">
-                <div class="band"><text class="band_text">Blog</div>
-            </div> </a>
-
-            <a href="http://www.aggressivelyhelpful.com" target="_blank"> <div class="tile" style="background-image:url('img/aggressive.png');background-size: 320px;background-position:center;background-position:top;"><div class="band"><text class="band_text">Aggressively Helpful</div></div> </a>
-
-            <a href="http://lucidandalight.tumblr.com/" target="_blank"><div class="tile" style="background-image:url('img/poetry.jpg');background-size: 315px;background-position:center;background-position:top;">
-                <div class="band"><text class="band_text">Poetry</div>
-            </div> </a></div>
-
-
-
+        <a href="http://lucidandalight.tumblr.com/" target="_blank">
+          <div class="tile" style="background-image:url('img/poetry.jpg');background-size: 315px;background-position:center;background-position:top;">
+            <div class="band">
+              <text class="band_text">Poetry</text>
+            </div>
+          </div>
+        </a>
 
 
 </div>
