--- a/index.html
+++ b/index.html
@@ -176,6 +176,15 @@ a.special {
 /*RESPONSIVE*/
 
 @media (max-width: 630px){
+  html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
   html{
     min-height: 0px;
   }
