--- a/index.html
+++ b/index.html
@@ -176,7 +176,14 @@ a.special {
 /*RESPONSIVE*/
 
 @media (max-width: 630px){
-
+  html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
 
   html{
     min-height: 0px;
@@ -247,7 +254,7 @@ border:0px;
   .stream {
     left:0px;
     margin:0px auto;
-
+    padding-top: 0px;
     border: none;
     display: block;
     width: 100%;
@@ -260,11 +267,6 @@ border:0px;
     display: block;
     margin-right: 0px;
     margin-left: 0px;
-
-    width: 100%;
-    height: 100%;
-    padding: 0px;
-    overflow-x: hidden;
   }
 
 
