--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ line-height: 19px;
   .sidebar {
     display: block;
     position: relative !important;
-    width: auto;
+    width: 100%;
     height: auto;
     border-right: none;
     text-align: center;
