--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ line-height: 19px;
 }
 
   .sidebar {
-    display: block;
+    /*display: block;*/
     position: relative !important;
     width: 100%;
     height: auto;
