--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ a.special {
 }
 
 .textblock {
-  display: block;
+  /*display: block;*/
   margin-left: auto;
   margin-right: auto;
   width:93%;
@@ -236,8 +236,8 @@ line-height: 19px;
     height: auto;
     border-right: none;
     text-align: center;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     min-height: 0px;
   }
 
