--- a/index.html
+++ b/index.html
@@ -185,6 +185,13 @@ a.special {
     overflow-x: hidden;
 }
 
+  .container {
+width: 100%;
+margin: 0 auto;
+border:0px;
+   padding: 0px;
+}
+
   html{
     min-height: 0px;
   }
@@ -245,11 +252,7 @@ line-height: 19px;
     text-align: center;
   }
 
-  .container {
-width: 100%;
-margin: 0 auto;
-border:0px;
-}
+
 
   .stream {
     left:0px;
