--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@ line-height: 19px;
 
   .sidebar {
     /*display: block;*/
-    position: relative !important;
+    position: relative;
+    /*position: relative !important;*/
     width: 100%;
     height: auto;
     border-right: none;
