--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ a.special {
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
 }
 
   .container {
