--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@ line-height: 19px;
     margin: 0px;
     padding: 0px;
     min-height: 0px;
+
   }
 
   .title{
@@ -271,6 +272,7 @@ line-height: 19px;
     display: block;
     margin-right: 0px;
     margin-left: 0px;
+    overflow-x: hidden;
   }
 
 
