--- a/index.html
+++ b/index.html
@@ -303,12 +303,12 @@ line-height: 19px;
 
 </head>
 
+<body>
 
 
 
 
 
-<div class="container">
 
 
   <div class="sidebar">
@@ -387,8 +387,8 @@ line-height: 19px;
         </a>
 
 
-</div>
 
 
+</body>
 
 </html>
