--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ a.special {
 {
     width: 100%;
     height: 100%;
-    margin: 0px;
+    margin:0px auto;
     padding: 0px;
     overflow-x: hidden;
 }
