--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@ line-height: 19px;
     position: relative;
     /*position: relative !important;*/
     width: 100%;
+    max-width: 100%;
     height: auto;
     border-right: none;
     text-align: center;
