--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ line-height: 19px;
     margin-top: 15px;
     clear: both;
     background-color: white;
-    position: absolute;
+    position: auto;
     min-height: 0px;
     display: block;
     margin-right: 0px;
