--- a/index.html
+++ b/index.html
@@ -290,8 +290,9 @@ line-height: 19px;
   }
 
   .tile{
+      min-width: 210px;
       margin: auto;
-      margin-top: 7px;
+      margin-bottom: 7px;
       clear:both;
       float:none;
       display: block;
