--- a/index.html
+++ b/index.html
@@ -186,6 +186,10 @@ a.special {
     overflow-x: hidden;
 }
 
+.helpful{
+  font-size: 12px;
+}
+
   .container {
 width: 100%;
 margin: 0 auto;
@@ -376,7 +380,7 @@ line-height: 19px;
         <a href="http://www.aggressivelyhelpful.com" target="_blank">
           <div class="tile" style="background-image:url('img/aggressive.png');background-size: 320px;background-position:center;background-position:top;">
             <div class="band">
-              <text class="band_text">Aggressively Helpful</text>
+              <text class="band_text helpful">Aggressively Helpful</text>
             </div>
           </div>
         </a>
