--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@ img.center { vertical-align:top; margin:0px; padding: 0px; border:0px; }
 .div_image{
   width:100%;
   height:550px;
+  max-height: 450px;
   background-size: 460px;
-  background-position:center;
+  background-position:top, center;
 }
 
 
