--- a/index.html
+++ b/index.html
@@ -7,40 +7,65 @@
 
 <style>
 
-/*Divs*/
 
-.container {
-width: 100%;
-margin: 0 auto;
-border:0px;
+.div_image{
+  width:100%;
+  height:550px;
+  max-height: 450px;
+  background-size: 460px;
+  background-position:top, center;
+  background-repeat: no-repeat;
 }
 
-.stream {
-  min-width: 605px;
-  margin-left: 37%;
-  margin-right: 10%;
-  padding-top: 25px;
-  background-color: white;
-  backface-visibility: visible;
-  -webkit-backface-visibility: visible;
-  -moz-backface-visibility: visible;
+a:link{
+  text-decoration: none;
 }
 
-.sidebar{
-  width: 30%;
-  margin-right: 15%;
-  position: fixed;
-  border-right: 1px solid rgb(102, 102, 101);
-  height: 100%;
-  min-width: 350px;
-  max-width: 450px;
-  min-height:647px;
+a.special {
+  color:white;
 }
 
-.tiles_div{
-position: relative;
-display: block;
-max-width: 800px;
+table {
+  width: 100%;
+  background-color: transparent;
+  border-collapse: collapse;
+  border-spacing: 0;
+  border:black;
+}
+
+
+td, tr, tbody, table {
+  font-size:16px;
+  text-align: center;
+  background-color: black;
+  padding:10px;
+  padding:black;
+  width:20%;
+  border:black;
+  border:0px;}
+
+.table th,
+.table td {
+  padding: 8px;
+  line-height: 20px;
+  text-align: left;
+  vertical-align: top;
+  border-top: 1px solid #dddddd;
+}
+
+.textblock {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:300px;
+}
+
+.band_text{
+    color:white;
+    font-size: 16px;
+    font-family: freight-sans-pro, 'Myriad Pro', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
+font-size: 21px;
+
 }
 
 .tile{
@@ -96,63 +121,44 @@ height: 16px;
 letter-spacing: 2px;
 }
 
-.band_text{
-    color:white;
-    font-size: 16px;
-    font-family: freight-sans-pro, 'Myriad Pro', 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', Geneva, Verdana, sans-serif;
-font-size: 21px;
 
+
+
+/*Divs*/
+
+@media (min-width:960px ){
+
+.stream {
+  min-width: 605px;
+  margin-left: 37%;
+  margin-right: 10%;
+  padding-top: 25px;
+  background-color: white;
+  backface-visibility: visible;
+  -webkit-backface-visibility: visible;
+  -moz-backface-visibility: visible;
+}
+
+.sidebar{
+  width: 30%;
+  margin-right: 15%;
+  position: fixed;
+  border-right: 1px solid rgb(102, 102, 101);
+  height: 100%;
+  min-width: 350px;
+  max-width: 450px;
+  min-height:647px;
+}
+
+.tiles_div{
+position: relative;
+display: block;
+max-width: 800px;
 }
 
 img.center { vertical-align:top; margin:0px; padding: 0px; border:0px; }
 
-.textblock {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width:300px;
-}
-
-
-.div_image{
-  width:100%;
-  height:550px;
-  max-height: 450px;
-  background-size: 460px;
-  background-position:top, center;
-}
-
-
 /*TABLE*/
-
-table {
-  width: 100%;
-  background-color: transparent;
-  border-collapse: collapse;
-  border-spacing: 0;
-  border:black;
-}
-
-
-td, tr, tbody, table {
-  font-size:16px;
-  text-align: center;
-  background-color: black;
-  padding:10px;
-  padding:black;
-  width:20%;
-  border:black;
-  border:0px;}
-
-.table th,
-.table td {
-  padding: 8px;
-  line-height: 20px;
-  text-align: left;
-  vertical-align: top;
-  border-top: 1px solid #dddddd;
-}
-
 
 /*Elements*/
 
@@ -165,18 +171,149 @@ hr {
   border-bottom: 1px solid #ffffff;
 }
 
-a:link{
-  text-decoration: none;
 }
 
-a.special {
-  color:white;
+/*IPAD SCREEN*/
+
+@media (max-width:768px ){
+  body
+{
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    margin:0px auto;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
+.helpful{
+  font-size: 15px;
+}
+
+  .container {
+width: 100%;
+margin: 0 auto;
+border:0px;
+   padding: 0px;
+}
+
+  html{
+    min-height: 0px;
+  }
+
+  body {
+    min-height: 0px;
+  }
+
+
+  table{
+    width:70%;
+  }
+
+.about_heading{
+  font-size: 20px;
+}
+
+.textblock {
+  /*display: block;*/
+  margin-left: auto;
+  margin-right: auto;
+  width:93%;
+}
+
+.about_text{
+    color: rgb(102, 102, 101);
+display: block;
+font-family: ff-tisa-web-pro, Georgia, Cambria, 'Times New Roman', Times, serif;
+font-size: 12px;
+font-style: italic;
+font-weight: normal;
+height: 40px;
+line-height: 19px;
+}
+
+.div_image{
+  width:100%;
+  max-height:400px;
+  height:245px;
+  background-size: 350px;
+  background-position:top, center;
+  background-repeat: no-repeat;
+}
+
+  .sidebar {
+    /*display: block;*/
+    position: relative;
+    /*position: relative !important;*/
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+    border-right: none;
+    text-align: center;
+    margin: 0px;
+    padding: 0px;
+    min-height: 0px;
+
+  }
+
+  .title{
+    text-align: center;
+  }
+
+
+
+  .stream {
+    left:0px;
+    margin:0px auto;
+    padding-top: 0px;
+    border: none;
+    display: block;
+    width: 100%;
+    min-width: 100%;
+    margin-top: 15px;
+    clear: both;
+    background-color: white;
+    position: auto;
+    min-height: 0px;
+    display: block;
+    margin-right: 0px;
+    margin-left: 14px;
+    overflow-x: hidden;
+  }
+
+
+
+
+
+
+  .tiles_div{
+      /*margin:0px auto;*/
+      /*clear:both;*/
+      display: block;
+      width:100%;
+  }
+
+  .tile{
+      min-width: 210px;
+      margin: auto;
+      margin-bottom: 7px;
+      clear:both;
+      float:none;
+      display: block;
+  }
 }
 
 
-/*RESPONSIVE*/
 
-@media (max-width: 630px){
+
+
+
+
+
+
+/*MOBILE SCREEN*/
+
+@media (max-width: 524px){
   body
 {
     width: 100%;
