put max with on the desktop page.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <style>
 
 
+.tilebucket{
+  max-width: 720px;
+  padding-right: 20px;
+}
+
 .div_image{
   width:100%;
   height:550px;
@@ -419,11 +424,18 @@ line-height: 19px;
 
 
 <div class="stream">
+
+    <div class="tilebucket">
+
     <hr>
 
     <span class="title">PROJECTS</span>
 
     <hr>
+
+
+
+
         <a href="http://newslabarticles.tumblr.com/" target="_blank">
           <div class="tile" style="background-image:url('img/newslab.png');background-size: 165px;background-repeat:repeat;background-position:top;">
             <div class="band">
@@ -472,7 +484,8 @@ line-height: 19px;
           </div>
         </a>
 
-
+      </div>
+      </div>
 
 
 </body>
