--- a/index.html
+++ b/index.html
@@ -178,6 +178,16 @@ html{
 @media (max-width:990px ){
 
 
+.tilebucket{
+  max-width: 720px;
+  padding-right: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /*width:300px;*/
+}
+
+
 .helpful{
   font-size: 15px;
 }
@@ -252,8 +262,6 @@ font-size: 16px;
       min-width: 210px;
       margin: 7px;
       margin-bottom: 7px;
-
-      float:left;
       display: block;
   }
 }
