--- a/index.html
+++ b/index.html
@@ -381,9 +381,19 @@ line-height: 19px;
     min-height: 0px;
     display: block;
     margin-right: 0px;
-    margin-left: 23px;
+    margin-left: 0px;
     overflow-x: hidden;
   }
+
+
+.tilebucket{
+  max-width: 213px;
+  /*padding-right: 20px;*/
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /*width:300px;*/
+}
 
 
   .tile{
