--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@ font-size: 16px;
   width:100%;
   max-height:400px;
   height:330px;
-  background-size: 350px;
-  background-position:top, center;
+  background-size: 910px;
+  background-position: -60px -250px;
   background-repeat: no-repeat;
 }
 
