--- a/photos.html
+++ b/photos.html
@@ -3,7 +3,13 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="css/bootstrap.css">
+<link rel="stylesheet" href="css/bootstrap.css">
+<script src="js/bootstrap.js" type="text/javascript"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+<script src="js/bootstrap-carousel.js" type="text/javascript"></script>
+
+
+
 </head>
 
 <body>
@@ -21,12 +27,34 @@
 	</div>
 
 
-<p><img src="img/HS_big_grin.jpg" width="440" alt="some_text"> </p>
+
+<div id="myCarousel" class="carousel slide">
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+  <!-- Carousel items -->
+  <div class="carousel-inner">
+    <div class="active item"><img src="img/HS_demure.jpg" width="440" alt="some_text"></div>
+    <div class="item"><img src="img/HS_downcast_eyes.jpg" width="440" alt="some_text"></div>
+    <div class="item"><img src="img/HS_skeptical.jpg" width="440" alt="some_text"></div>
+  </div>
+  <!-- Carousel nav -->
+  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+</div>
+
+
+
+
+
+<!-- <p><img src="img/HS_big_grin.jpg" width="440" alt="some_text"> </p>
 <p><img src="img/HS_demure.jpg" width="440" alt="some_text"> </p>
 <p><img src="img/HS_downcast_eyes.jpg" width="440" alt="some_text"> </p>
 <p><img src="img/HS_glamour.jpg" width="440" alt="some_text"> </p>
 <p><img src="img/HS_skeptical.jpg" width="440" alt="some_text"> </p>
-<p><img src="img/ali_saucy.jpg" width="440" alt="some_text"> </p>
+<p><img src="img/ali_saucy.jpg" width="440" alt="some_text"> </p> -->
 
 
 
