--- a/photos.html
+++ b/photos.html
@@ -20,9 +20,8 @@
 		<div class="row">
 		<div class="span8 offet4" style="text-align:center">
 		<h3>Photos</h3>
-		<a href="index.html">< Back</a>
-		<br>
-		<br>
+
+
 	</div>
 	</div>
 
@@ -33,12 +32,19 @@
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+    <li data-target="#myCarousel" data-slide-to="4"></li>
+    <li data-target="#myCarousel" data-slide-to="5"></li>
+    <li data-target="#myCarousel" data-slide-to="6"></li>
   </ol>
   <!-- Carousel items -->
-  <div class="carousel-inner">
-    <div class="active item"><img src="img/HS_demure.jpg" width="440" alt="some_text"></div>
-    <div class="item"><img src="img/HS_downcast_eyes.jpg" width="440" alt="some_text"></div>
-    <div class="item"><img src="img/HS_skeptical.jpg" width="440" alt="some_text"></div>
+  <div class="carousel-inner" style="height:530px">
+    <div class="active item"><img src="img/HS_big_grin.jpg" width="640" alt="some_text"></div>
+    <div class="item"><img src="img/HS_demure.jpg" width="640" alt="some_text"></div>
+    <div class="item"><img src="img/HS_downcast_eyes.jpg" width="640" alt="some_text"></div>
+    <div class="item"><img src="img/HS_glamour.jpg" width="640" alt="some_text"></div>
+    <div class="item"><img src="img/HS_skeptical.jpg" width="640" alt="some_text"></div>
+    <div class="item"><img src="img/ali_saucy.jpg" width="640" alt="some_text"></div>
   </div>
   <!-- Carousel nav -->
   <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
